# aloh

./: readme.md
aloh-engine/: Cargo.toml  README.md  package.json
aloh-engine/src/: lib.rs  objects.rs  parse.rs  prototypes.rs
aloh-langserv/: .gitignore  dbman.js  dbman.mjs  engine_glue.mjs  index.js  index.mjs  language_server.js  language_server.mjs  objman.js  objman.mjs  package.json  readme.md  requirements.txt  scratch.js  socket_client.js  socket_test.py  spacy_server.py  temp.txt  util.mjs  visualize_frequencies.py  visualize_selection.html
lsp-sample/: package-lock.json  package.json
lsp-sample/server/src/: server.ts
